--- a/site/themes/zen/layouts/partials/header.html
+++ b/site/themes/zen/layouts/partials/header.html
@@ -5,6 +5,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/style.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Hind:300,700" rel="stylesheet">
+
 
     <link rel="apple-touch-icon" sizes="57x57" href="{{ .Site.BaseURL }}img/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ .Site.BaseURL }}img/favicons/apple-icon-60x60.png">
