--- a/site/themes/zen/layouts/partials/header.html
+++ b/site/themes/zen/layouts/partials/header.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Hind:300,700" rel="stylesheet">
 
