--- a/site/themes/zen/layouts/portfolio/single.html
+++ b/site/themes/zen/layouts/portfolio/single.html
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-md-9 ">
                     <div id="project-header" class="fill">
-                        <img src="{{$.Site.BaseURL}}img/{{.Params.image}}" class="img-responsive">
+                        <img src="{{$.Site.BaseURL}}/img/{{.Params.image}}" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-md-3">
