--- a/site/themes/zen/layouts/partials/scripts.html
+++ b/site/themes/zen/layouts/partials/scripts.html
@@ -1,5 +1,5 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{{ .Site.BaseURL }}js/jquery-3.1.1.min.js"></script>
+    <script src="{{ .Site.BaseURL }}/js/jquery-3.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script>
-    <script src="{{ .Site.BaseURL }}js/script.js"></script>
+    <script src="{{ .Site.BaseURL }}/js/bootstrap.min.js"></script>
+    <script src="{{ .Site.BaseURL }}/js/script.js"></script>
