--- a/site/themes/zen/layouts/index.html
+++ b/site/themes/zen/layouts/index.html
@@ -5,6 +5,7 @@
   {{partial "about" .}}
   {{ partial "researchGrid" .}}
   {{ partial "graphicDesignGrid" .}}
+  {{ partial "making" .}}
 </div>
 
 {{partial "footer.html" .}}
