--- a/site/themes/zen/layouts/partials/making.html
+++ b/site/themes/zen/layouts/partials/making.html
@@ -1,10 +1,10 @@
 <section id="research">
     <div class="container">
-        <h3 class="category">visual design</h3>
+        <h3 class="category">making</h3>
         <div class="row">
 
             {{ range .Data.Pages }}
-                {{if eq .Params.category "graphicDesign" }}
+                {{if eq .Params.category "making" }}
                     <div class="portfolio_item col-md-3 col-sx-12">
                         <div class="inner" style="background-image:url('{{.Site.BaseURL}}/img/{{ replace .Params.image " ." " _1024." }}') ">
 
